--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 /*  your css code here. If applicable */
 .h1{
-	color:blue;
+	color:#2a7ae2;
 }
 .h2{
-	color:red;
+	color:#f44336;
 }
 .h3{
-	color:green;
+	color: #4caf50;
 }
 .h4{
 	color: #ff9800;
